<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        android:contentDescription="@string/description_avatar"
        tools:srcCompat="@sample/Posts_avatar"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        android:contentDescription="@string/description_menu"
        app:srcCompat="@drawable/baseline_more_vert_24"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author, avatar, menu, published"
        />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        tools:text="@sample/posts.json/data/published"
        />
    <TextView
        android:id="@+id/content"
        android:layout_width="140pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="likes, like_count, shared, share_count, views, view_count"
        />
    <ImageButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toStartOf="@id/like_count"
        app:layout_constraintBottom_toTopOf="@id/line"
        android:paddingStart="@dimen/icon_spacing"
        android:paddingEnd="@dimen/icon_spacing"
        android:contentDescription="@string/description_likes"
        app:srcCompat="@drawable/baseline_favorite_border_24"
        android:orientation="horizontal"
        app:layout_constraintVertical_chainStyle="spread_inside"
        />

    <TextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:paddingStart="@dimen/icon_spacing"
        android:paddingEnd="@dimen/icon_spacing"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toStartOf="@id/shared"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        tools:text="@sample/posts.json/data/likes"

        />

    <ImageButton
        android:id="@+id/shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintStart_toEndOf="@id/like_count"
        app:layout_constraintEnd_toStartOf="@id/share_count"
        app:layout_constraintBottom_toTopOf="@id/line"
        android:contentDescription="@string/description_shares"
        android:paddingStart="@dimen/icon_spacing"
        android:paddingEnd="@dimen/icon_spacing"
        app:srcCompat="@drawable/baseline_share_24"
        />

    <TextView
        android:id="@+id/share_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintStart_toEndOf="@id/shared"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintBottom_toBottomOf="@id/shared"
        android:paddingStart="@dimen/icon_spacing"
        android:paddingEnd="@dimen/icon_spacing"
        tools:text="@sample/posts.json/data/shares"
        />

    <ImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/view_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/view_count"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        android:contentDescription="@string/description_views"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/icon_spacing"
        android:paddingEnd="@dimen/icon_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintBottom_toBottomOf="@id/views"
        tools:text="@sample/posts.json/data/views"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/icon_spacing"
        app:layout_constraintTop_toBottomOf="@id/views"
        android:layout_height="@dimen/line_height"
        android:background="#ffff0000"/>

</androidx.constraintlayout.widget.ConstraintLayout>
